# DoubanQt

./: .gitignore  CLAUDE.md  CMakeLists.txt  build.bat
build_client/server/ChatServer_autogen/EWIEGA46WW/: moc_chatserver.cpp.d  moc_serverdb.cpp.d
build_qmysql/: CMakeLists.txt  libmysql.def
build_qmysql/qsqlmysql_autogen/: moc_predefs.h  mocs_compilation.cpp
build_qmysql/qsqlmysql_autogen/22VHT2LQTW/: moc_qsql_mysql_p.cpp.d
build_qmysql/qsqlmysql_autogen/include/: main.moc  main.moc.d
build_server/ChatServer_autogen/: moc_predefs.h  mocs_compilation.cpp
build_server/ChatServer_autogen/EWIEGA46WW/: moc_chatserver.cpp.d  moc_connectionpool.cpp.d  moc_serverdb.cpp.d
server/: CMakeLists.txt  chatserver.cpp  chatserver.h  connectionpool.cpp  connectionpool.h  httpserver.cpp  httpserver.h  main.cpp  serverdb.cpp  serverdb.h
src/: apimanager.cpp  apimanager.h  avatarcache.cpp  avatarcache.h  avatarwidget.cpp  avatarwidget.h  chatbubble.cpp  chatbubble.h  chatmanager.cpp  chatmanager.h  chatmessagedelegate.cpp  chatmessagedelegate.h  chatmessagewidget.cpp  chatmessagewidget.h  chatmodel.cpp  chatmodel.h  databasemanager.cpp  databasemanager.h  friendswidget.cpp  friendswidget.h  homewidget.cpp  homewidget.h  imagecache.cpp  imagecache.h  loadingwidget.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  moviecard.cpp  moviecard.h  moviedetailwidget.cpp  moviedetailwidget.h  moviemodel.h  profileeditdialog.cpp  profileeditdialog.h  profilewidget.cpp  profilewidget.h  ratingwidget.cpp  (+7 more)
